--- a/compose.yaml
+++ b/compose.yaml
@@ -7,8 +7,17 @@ x-spring-database-variables: &spring-db-variables
   SPRING_DATASOURCE_USERNAME: api
   SPRING_DATASOURCE_PASSWORD: secret
 services:
+  client:
+    image: rickallan/javagas-client:v0.1
+    container_name: "javagas-client"
+    ports:
+      - '80:80'
+      - '443:443'
+    networks:
+      - default
+    mem_limit: 256m
   server:
-    image: rickallan/javagas-server:v0.2
+    image: rickallan/javagas-server:v0.2.1
     container_name: "javagas-server"
     ports:
       - '8080:8080'
@@ -37,7 +46,7 @@ services:
     networks:
       - default
     volumes:
-      - ./src/main/resources/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./server/javagas/src/main/resources/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     mem_limit: 128m
