--- a/server/javagas/pom.xml
+++ b/server/javagas/pom.xml
@@ -10,10 +10,13 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.github.allan-rcos</groupId>
-    <artifactId>javagas</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>javagas-server</artifactId>
+    <version>0.0.2</version>
     <name>javagas</name>
-    <description>javagas</description>
+    <description>
+        A Server for the JaVagas project, which is a Java-based
+        recruitment system.
+    </description>
     <url/>
     <licenses>
         <license/>
@@ -28,7 +31,14 @@
         <url/>
     </scm>
     <properties>
-        <java.version>24</java.version>
+        <java.version>21</java.version>
+        <springdoc-openapi-starter-webmvc-ui.version>2.8.9
+        </springdoc-openapi-starter-webmvc-ui.version>
+        <jjwt.version>0.12.6</jjwt.version>
+        <spring-boot-maven-plugin.version>3.5.3
+        </spring-boot-maven-plugin.version>
+        <springdoc-openapi-maven-plugin.version>1.4
+        </springdoc-openapi-maven-plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -42,6 +52,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 
         <dependency>
@@ -64,9 +83,9 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.restdocs</groupId>
-            <artifactId>spring-restdocs-mockmvc</artifactId>
-            <scope>test</scope>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -77,17 +96,17 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.12.6</version>
+            <version>${jjwt.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.12.6</version>
+            <version>${jjwt.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
-            <version>0.12.6</version>
+            <version>${jjwt.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -99,7 +118,7 @@
     </dependencies>
 
     <build>
-        <finalName>javagas-server</finalName>
+        <finalName>${project.name}-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.asciidoctor</groupId>
@@ -162,6 +181,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.11.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                <version>${springdoc-openapi-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
