--- a/client/javagas/.gitignore
+++ b/client/javagas/.gitignore
@@ -40,3 +40,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Angular development environment
+!/src/environments/environment.development.ts
