Flyway Migrations, Security package marked as deprecated (Files send to respected packages) and Username and Email Unique validation

--- a/server/javagas/compose.yaml
+++ b/server/javagas/compose.yaml
@@ -3,9 +3,9 @@ x-database-variables: &db-variables
   POSTGRES_USER: api
   POSTGRES_PASSWORD: secret
 x-spring-database-variables: &spring-db-variables
-  SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/javagas
-  SPRING_DATASOURCE_USERNAME: api
-  SPRING_DATASOURCE_PASSWORD: secret
+  POSTGRES_URL: jdbc:postgresql://postgres:5432/javagas
+  POSTGRES_USER: api
+  POSTGRES_PASSWORD: secret
 services:
   server:
     image: rickallan/javagas-server:latest
@@ -23,7 +23,7 @@ services:
     environment:
       <<: *db-variables
     ports:
-      - '5432:5432'
+      - '54322:5432'
     networks:
       - default
     volumes:
