--- a/server/javagas/pom.xml
+++ b/server/javagas/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>io.github.allan-rcos</groupId>
     <artifactId>javagas-server</artifactId>
-    <version>0.2.1</version>
+    <version>0.2.4</version>
     <name>javagas</name>
     <description>
         A Server for the JaVagas project, which is a Java-based
@@ -39,6 +39,7 @@
         </spring-boot-maven-plugin.version>
         <springdoc-openapi-maven-plugin.version>1.4
         </springdoc-openapi-maven-plugin.version>
+        <flyway.version>10.10.0</flyway.version>
     </properties>
     <dependencies>
         <dependency>
@@ -72,6 +73,16 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
